sub/pl/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> file
Rule 1     file -> functions
Rule 2     file -> body
Rule 3     functions -> function
Rule 4     functions -> functions function
Rule 5     funcall -> ID LPAREN funcall_params RPAREN
Rule 6     funcall_params -> empty
Rule 7     funcall_params -> expression
Rule 8     funcall_params -> funcall_params COMMA expression
Rule 9     function -> DEF ID LPAREN fun_params RPAREN LBRACE body RBRACE
Rule 10    fun_params -> empty
Rule 11    fun_params -> ID
Rule 12    fun_params -> fun_pointer
Rule 13    fun_params -> fun_params COMMA fun_pointer
Rule 14    fun_params -> fun_params COMMA ID
Rule 15    fun_pointer -> ID LPAREN RPAREN
Rule 16    body -> ex
Rule 17    body -> body ex
Rule 18    ex -> assign SEMI
Rule 19    ex -> return SEMI
Rule 20    ex -> write SEMI
Rule 21    ex -> readd SEMI
Rule 22    ex -> funcall SEMI
Rule 23    ex -> readd_esc SEMI
Rule 24    ex -> nop SEMI
Rule 25    ex -> if
Rule 26    ex -> foreach
Rule 27    ex -> readd_esc
Rule 28    nop -> NOP
Rule 29    if -> IF LPAREN expression RPAREN LBRACE body RBRACE
Rule 30    if -> IF LPAREN expression RPAREN LBRACE body RBRACE ELSE if
Rule 31    if -> IF LPAREN expression RPAREN LBRACE body RBRACE ELSE LBRACE body RBRACE
Rule 32    foreach -> FOR LPAREN var COLON value RPAREN LBRACE body RBRACE
Rule 33    return -> RETURN expression
Rule 34    write -> WRITE expression
Rule 35    readd -> READD expression
Rule 36    readd_esc -> LT string GT
Rule 37    readd_esc -> LT ID string GT
Rule 38    assign -> var EQUALS expression
Rule 39    expression -> value
Rule 40    expression -> bool_ex
Rule 41    expression -> op_ex
Rule 42    bool_ex -> bool_value EQ bool_value
Rule 43    bool_ex -> bool_value NE bool_value
Rule 44    bool_ex -> bool_value LE bool_value
Rule 45    bool_ex -> bool_value GE bool_value
Rule 46    bool_ex -> bool_value LT bool_value
Rule 47    bool_ex -> bool_value GT bool_value
Rule 48    bool_ex -> bool_value LOR bool_value
Rule 49    bool_ex -> bool_value LAND bool_value
Rule 50    bool_ex -> LNOT bool_value
Rule 51    bool_ex -> LPAREN bool_ex RPAREN
Rule 52    bool_value -> value
Rule 53    bool_value -> op_ex
Rule 54    op_ex -> value PLUS value
Rule 55    op_ex -> value MINUS value
Rule 56    op_ex -> value TIMES value
Rule 57    op_ex -> value DIVIDE value
Rule 58    op_ex -> value MOD value
Rule 59    op_ex -> value LSHIFT value
Rule 60    op_ex -> value RSHIFT value
Rule 61    op_ex -> value OR value
Rule 62    op_ex -> value AND value
Rule 63    op_ex -> value XOR value
Rule 64    op_ex -> value PLUS op_ex
Rule 65    op_ex -> value MINUS op_ex
Rule 66    op_ex -> value TIMES op_ex
Rule 67    op_ex -> value DIVIDE op_ex
Rule 68    op_ex -> value MOD op_ex
Rule 69    op_ex -> value LSHIFT op_ex
Rule 70    op_ex -> value RSHIFT op_ex
Rule 71    op_ex -> value OR op_ex
Rule 72    op_ex -> value AND op_ex
Rule 73    op_ex -> value XOR op_ex
Rule 74    op_ex -> LPAREN op_ex RPAREN
Rule 75    value -> var
Rule 76    value -> int
Rule 77    value -> float
Rule 78    value -> string
Rule 79    value -> bool
Rule 80    value -> funcall
Rule 81    value -> list
Rule 82    value -> array_get
Rule 83    value -> tree_get
Rule 84    int -> INT
Rule 85    float -> FLOAT
Rule 86    string -> STRING
Rule 87    string -> MULTI_STRING
Rule 88    bool -> TRUE
Rule 89    bool -> FALSE
Rule 90    list -> LBRACKET array RBRACKET
Rule 91    array -> value
Rule 92    array -> array COMMA value
Rule 93    array_get -> ID LBRACKET INT RBRACKET
Rule 94    tree_get -> ID LBRACKET string RBRACKET
Rule 95    var -> ID
Rule 96    empty -> <empty>

Terminals, with rules where they appear

AND                  : 62 72
COLON                : 32
COMMA                : 8 13 14 92
DEF                  : 9
DIVIDE               : 57 67
ELSE                 : 30 31
EQ                   : 42
EQUALS               : 38
FALSE                : 89
FLOAT                : 85
FOR                  : 32
GE                   : 45
GT                   : 36 37 47
ID                   : 5 9 11 14 15 37 93 94 95
IF                   : 29 30 31
INT                  : 84 93
LAND                 : 49
LBRACE               : 9 29 30 31 31 32
LBRACKET             : 90 93 94
LE                   : 44
LNOT                 : 50
LOR                  : 48
LPAREN               : 5 9 15 29 30 31 32 51 74
LSHIFT               : 59 69
LT                   : 36 37 46
MINUS                : 55 65
MOD                  : 58 68
MULTI_STRING         : 87
NE                   : 43
NOP                  : 28
OR                   : 61 71
PLUS                 : 54 64
RBRACE               : 9 29 30 31 31 32
RBRACKET             : 90 93 94
READD                : 35
RETURN               : 33
RPAREN               : 5 9 15 29 30 31 32 51 74
RSHIFT               : 60 70
SEMI                 : 18 19 20 21 22 23 24
STRING               : 86
TIMES                : 56 66
TRUE                 : 88
WRITE                : 34
XOR                  : 63 73
error                : 

Nonterminals, with rules where they appear

array                : 90 92
array_get            : 82
assign               : 18
body                 : 2 9 17 29 30 31 31 32
bool                 : 79
bool_ex              : 40 51
bool_value           : 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50
empty                : 6 10
ex                   : 16 17
expression           : 7 8 29 30 31 33 34 35 38
file                 : 0
float                : 77
foreach              : 26
fun_params           : 9 13 14
fun_pointer          : 12 13
funcall              : 22 80
funcall_params       : 5 8
function             : 3 4
functions            : 1 4
if                   : 25 30
int                  : 76
list                 : 81
nop                  : 24
op_ex                : 41 53 64 65 66 67 68 69 70 71 72 73 74
readd                : 21
readd_esc            : 23 27
return               : 19
string               : 36 37 78 94
tree_get             : 83
value                : 32 39 52 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 65 66 67 68 69 70 71 72 73 91 92
var                  : 32 38 75
write                : 20

Parsing method: LALR

state 0

    (0) S' -> . file
    (1) file -> . functions
    (2) file -> . body
    (3) functions -> . function
    (4) functions -> . functions function
    (16) body -> . ex
    (17) body -> . body ex
    (9) function -> . DEF ID LPAREN fun_params RPAREN LBRACE body RBRACE
    (18) ex -> . assign SEMI
    (19) ex -> . return SEMI
    (20) ex -> . write SEMI
    (21) ex -> . readd SEMI
    (22) ex -> . funcall SEMI
    (23) ex -> . readd_esc SEMI
    (24) ex -> . nop SEMI
    (25) ex -> . if
    (26) ex -> . foreach
    (27) ex -> . readd_esc
    (38) assign -> . var EQUALS expression
    (33) return -> . RETURN expression
    (34) write -> . WRITE expression
    (35) readd -> . READD expression
    (5) funcall -> . ID LPAREN funcall_params RPAREN
    (36) readd_esc -> . LT string GT
    (37) readd_esc -> . LT ID string GT
    (28) nop -> . NOP
    (29) if -> . IF LPAREN expression RPAREN LBRACE body RBRACE
    (30) if -> . IF LPAREN expression RPAREN LBRACE body RBRACE ELSE if
    (31) if -> . IF LPAREN expression RPAREN LBRACE body RBRACE ELSE LBRACE body RBRACE
    (32) foreach -> . FOR LPAREN var COLON value RPAREN LBRACE body RBRACE
    (95) var -> . ID

    DEF             shift and go to state 7
    RETURN          shift and go to state 2
    WRITE           shift and go to state 18
    READD           shift and go to state 22
    ID              shift and go to state 20
    LT              shift and go to state 10
    NOP             shift and go to state 23
    IF              shift and go to state 21
    FOR             shift and go to state 17

    body                           shift and go to state 15
    function                       shift and go to state 1
    functions                      shift and go to state 9
    return                         shift and go to state 16
    readd                          shift and go to state 3
    foreach                        shift and go to state 12
    funcall                        shift and go to state 4
    write                          shift and go to state 11
    ex                             shift and go to state 5
    file                           shift and go to state 6
    var                            shift and go to state 13
    readd_esc                      shift and go to state 14
    nop                            shift and go to state 19
    assign                         shift and go to state 24
    if                             shift and go to state 8

state 1

    (3) functions -> function .

    DEF             reduce using rule 3 (functions -> function .)
    $end            reduce using rule 3 (functions -> function .)


state 2

    (33) return -> RETURN . expression
    (39) expression -> . value
    (40) expression -> . bool_ex
    (41) expression -> . op_ex
    (75) value -> . var
    (76) value -> . int
    (77) value -> . float
    (78) value -> . string
    (79) value -> . bool
    (80) value -> . funcall
    (81) value -> . list
    (82) value -> . array_get
    (83) value -> . tree_get
    (42) bool_ex -> . bool_value EQ bool_value
    (43) bool_ex -> . bool_value NE bool_value
    (44) bool_ex -> . bool_value LE bool_value
    (45) bool_ex -> . bool_value GE bool_value
    (46) bool_ex -> . bool_value LT bool_value
    (47) bool_ex -> . bool_value GT bool_value
    (48) bool_ex -> . bool_value LOR bool_value
    (49) bool_ex -> . bool_value LAND bool_value
    (50) bool_ex -> . LNOT bool_value
    (51) bool_ex -> . LPAREN bool_ex RPAREN
    (54) op_ex -> . value PLUS value
    (55) op_ex -> . value MINUS value
    (56) op_ex -> . value TIMES value
    (57) op_ex -> . value DIVIDE value
    (58) op_ex -> . value MOD value
    (59) op_ex -> . value LSHIFT value
    (60) op_ex -> . value RSHIFT value
    (61) op_ex -> . value OR value
    (62) op_ex -> . value AND value
    (63) op_ex -> . value XOR value
    (64) op_ex -> . value PLUS op_ex
    (65) op_ex -> . value MINUS op_ex
    (66) op_ex -> . value TIMES op_ex
    (67) op_ex -> . value DIVIDE op_ex
    (68) op_ex -> . value MOD op_ex
    (69) op_ex -> . value LSHIFT op_ex
    (70) op_ex -> . value RSHIFT op_ex
    (71) op_ex -> . value OR op_ex
    (72) op_ex -> . value AND op_ex
    (73) op_ex -> . value XOR op_ex
    (74) op_ex -> . LPAREN op_ex RPAREN
    (95) var -> . ID
    (84) int -> . INT
    (85) float -> . FLOAT
    (86) string -> . STRING
    (87) string -> . MULTI_STRING
    (88) bool -> . TRUE
    (89) bool -> . FALSE
    (5) funcall -> . ID LPAREN funcall_params RPAREN
    (90) list -> . LBRACKET array RBRACKET
    (93) array_get -> . ID LBRACKET INT RBRACKET
    (94) tree_get -> . ID LBRACKET string RBRACKET
    (52) bool_value -> . value
    (53) bool_value -> . op_ex

    LNOT            shift and go to state 25
    LPAREN          shift and go to state 39
    ID              shift and go to state 40
    INT             shift and go to state 43
    FLOAT           shift and go to state 44
    STRING          shift and go to state 37
    MULTI_STRING    shift and go to state 31
    TRUE            shift and go to state 28
    FALSE           shift and go to state 42
    LBRACKET        shift and go to state 47

    string                         shift and go to state 38
    bool_ex                        shift and go to state 30
    int                            shift and go to state 26
    bool_value                     shift and go to state 33
    op_ex                          shift and go to state 32
    float                          shift and go to state 27
    list                           shift and go to state 45
    value                          shift and go to state 46
    array_get                      shift and go to state 34
    funcall                        shift and go to state 41
    bool                           shift and go to state 35
    var                            shift and go to state 36
    expression                     shift and go to state 48
    tree_get                       shift and go to state 29

state 3

    (21) ex -> readd . SEMI

    SEMI            shift and go to state 49


state 4

    (22) ex -> funcall . SEMI

    SEMI            shift and go to state 50


state 5

    (16) body -> ex .

    RETURN          reduce using rule 16 (body -> ex .)
    WRITE           reduce using rule 16 (body -> ex .)
    READD           reduce using rule 16 (body -> ex .)
    ID              reduce using rule 16 (body -> ex .)
    LT              reduce using rule 16 (body -> ex .)
    NOP             reduce using rule 16 (body -> ex .)
    IF              reduce using rule 16 (body -> ex .)
    FOR             reduce using rule 16 (body -> ex .)
    $end            reduce using rule 16 (body -> ex .)
    RBRACE          reduce using rule 16 (body -> ex .)


state 6

    (0) S' -> file .



state 7

    (9) function -> DEF . ID LPAREN fun_params RPAREN LBRACE body RBRACE

    ID              shift and go to state 51


state 8

    (25) ex -> if .

    RBRACE          reduce using rule 25 (ex -> if .)
    RETURN          reduce using rule 25 (ex -> if .)
    WRITE           reduce using rule 25 (ex -> if .)
    READD           reduce using rule 25 (ex -> if .)
    ID              reduce using rule 25 (ex -> if .)
    LT              reduce using rule 25 (ex -> if .)
    NOP             reduce using rule 25 (ex -> if .)
    IF              reduce using rule 25 (ex -> if .)
    FOR             reduce using rule 25 (ex -> if .)
    $end            reduce using rule 25 (ex -> if .)


state 9

    (1) file -> functions .
    (4) functions -> functions . function
    (9) function -> . DEF ID LPAREN fun_params RPAREN LBRACE body RBRACE

    $end            reduce using rule 1 (file -> functions .)
    DEF             shift and go to state 7

    function                       shift and go to state 52

state 10

    (36) readd_esc -> LT . string GT
    (37) readd_esc -> LT . ID string GT
    (86) string -> . STRING
    (87) string -> . MULTI_STRING

    ID              shift and go to state 53
    STRING          shift and go to state 37
    MULTI_STRING    shift and go to state 31

    string                         shift and go to state 54

state 11

    (20) ex -> write . SEMI

    SEMI            shift and go to state 55


state 12

    (26) ex -> foreach .

    RBRACE          reduce using rule 26 (ex -> foreach .)
    RETURN          reduce using rule 26 (ex -> foreach .)
    WRITE           reduce using rule 26 (ex -> foreach .)
    READD           reduce using rule 26 (ex -> foreach .)
    ID              reduce using rule 26 (ex -> foreach .)
    LT              reduce using rule 26 (ex -> foreach .)
    NOP             reduce using rule 26 (ex -> foreach .)
    IF              reduce using rule 26 (ex -> foreach .)
    FOR             reduce using rule 26 (ex -> foreach .)
    $end            reduce using rule 26 (ex -> foreach .)


state 13

    (38) assign -> var . EQUALS expression

    EQUALS          shift and go to state 56


state 14

    (23) ex -> readd_esc . SEMI
    (27) ex -> readd_esc .

    SEMI            shift and go to state 57
    RBRACE          reduce using rule 27 (ex -> readd_esc .)
    RETURN          reduce using rule 27 (ex -> readd_esc .)
    WRITE           reduce using rule 27 (ex -> readd_esc .)
    READD           reduce using rule 27 (ex -> readd_esc .)
    ID              reduce using rule 27 (ex -> readd_esc .)
    LT              reduce using rule 27 (ex -> readd_esc .)
    NOP             reduce using rule 27 (ex -> readd_esc .)
    IF              reduce using rule 27 (ex -> readd_esc .)
    FOR             reduce using rule 27 (ex -> readd_esc .)
    $end            reduce using rule 27 (ex -> readd_esc .)


state 15

    (2) file -> body .
    (17) body -> body . ex
    (18) ex -> . assign SEMI
    (19) ex -> . return SEMI
    (20) ex -> . write SEMI
    (21) ex -> . readd SEMI
    (22) ex -> . funcall SEMI
    (23) ex -> . readd_esc SEMI
    (24) ex -> . nop SEMI
    (25) ex -> . if
    (26) ex -> . foreach
    (27) ex -> . readd_esc
    (38) assign -> . var EQUALS expression
    (33) return -> . RETURN expression
    (34) write -> . WRITE expression
    (35) readd -> . READD expression
    (5) funcall -> . ID LPAREN funcall_params RPAREN
    (36) readd_esc -> . LT string GT
    (37) readd_esc -> . LT ID string GT
    (28) nop -> . NOP
    (29) if -> . IF LPAREN expression RPAREN LBRACE body RBRACE
    (30) if -> . IF LPAREN expression RPAREN LBRACE body RBRACE ELSE if
    (31) if -> . IF LPAREN expression RPAREN LBRACE body RBRACE ELSE LBRACE body RBRACE
    (32) foreach -> . FOR LPAREN var COLON value RPAREN LBRACE body RBRACE
    (95) var -> . ID

    $end            reduce using rule 2 (file -> body .)
    RETURN          shift and go to state 2
    WRITE           shift and go to state 18
    READD           shift and go to state 22
    ID              shift and go to state 20
    LT              shift and go to state 10
    NOP             shift and go to state 23
    IF              shift and go to state 21
    FOR             shift and go to state 17

    funcall                        shift and go to state 4
    return                         shift and go to state 16
    readd                          shift and go to state 3
    foreach                        shift and go to state 12
    write                          shift and go to state 11
    ex                             shift and go to state 58
    var                            shift and go to state 13
    readd_esc                      shift and go to state 14
    nop                            shift and go to state 19
    assign                         shift and go to state 24
    if                             shift and go to state 8

state 16

    (19) ex -> return . SEMI

    SEMI            shift and go to state 59


state 17

    (32) foreach -> FOR . LPAREN var COLON value RPAREN LBRACE body RBRACE

    LPAREN          shift and go to state 60


state 18

    (34) write -> WRITE . expression
    (39) expression -> . value
    (40) expression -> . bool_ex
    (41) expression -> . op_ex
    (75) value -> . var
    (76) value -> . int
    (77) value -> . float
    (78) value -> . string
    (79) value -> . bool
    (80) value -> . funcall
    (81) value -> . list
    (82) value -> . array_get
    (83) value -> . tree_get
    (42) bool_ex -> . bool_value EQ bool_value
    (43) bool_ex -> . bool_value NE bool_value
    (44) bool_ex -> . bool_value LE bool_value
    (45) bool_ex -> . bool_value GE bool_value
    (46) bool_ex -> . bool_value LT bool_value
    (47) bool_ex -> . bool_value GT bool_value
    (48) bool_ex -> . bool_value LOR bool_value
    (49) bool_ex -> . bool_value LAND bool_value
    (50) bool_ex -> . LNOT bool_value
    (51) bool_ex -> . LPAREN bool_ex RPAREN
    (54) op_ex -> . value PLUS value
    (55) op_ex -> . value MINUS value
    (56) op_ex -> . value TIMES value
    (57) op_ex -> . value DIVIDE value
    (58) op_ex -> . value MOD value
    (59) op_ex -> . value LSHIFT value
    (60) op_ex -> . value RSHIFT value
    (61) op_ex -> . value OR value
    (62) op_ex -> . value AND value
    (63) op_ex -> . value XOR value
    (64) op_ex -> . value PLUS op_ex
    (65) op_ex -> . value MINUS op_ex
    (66) op_ex -> . value TIMES op_ex
    (67) op_ex -> . value DIVIDE op_ex
    (68) op_ex -> . value MOD op_ex
    (69) op_ex -> . value LSHIFT op_ex
    (70) op_ex -> . value RSHIFT op_ex
    (71) op_ex -> . value OR op_ex
    (72) op_ex -> . value AND op_ex
    (73) op_ex -> . value XOR op_ex
    (74) op_ex -> . LPAREN op_ex RPAREN
    (95) var -> . ID
    (84) int -> . INT
    (85) float -> . FLOAT
    (86) string -> . STRING
    (87) string -> . MULTI_STRING
    (88) bool -> . TRUE
    (89) bool -> . FALSE
    (5) funcall -> . ID LPAREN funcall_params RPAREN
    (90) list -> . LBRACKET array RBRACKET
    (93) array_get -> . ID LBRACKET INT RBRACKET
    (94) tree_get -> . ID LBRACKET string RBRACKET
    (52) bool_value -> . value
    (53) bool_value -> . op_ex

    LNOT            shift and go to state 25
    LPAREN          shift and go to state 39
    ID              shift and go to state 40
    INT             shift and go to state 43
    FLOAT           shift and go to state 44
    STRING          shift and go to state 37
    MULTI_STRING    shift and go to state 31
    TRUE            shift and go to state 28
    FALSE           shift and go to state 42
    LBRACKET        shift and go to state 47

    string                         shift and go to state 38
    bool_ex                        shift and go to state 30
    int                            shift and go to state 26
    bool_value                     shift and go to state 33
    op_ex                          shift and go to state 32
    float                          shift and go to state 27
    list                           shift and go to state 45
    value                          shift and go to state 46
    array_get                      shift and go to state 34
    funcall                        shift and go to state 41
    bool                           shift and go to state 35
    var                            shift and go to state 36
    expression                     shift and go to state 61
    tree_get                       shift and go to state 29

state 19

    (24) ex -> nop . SEMI

    SEMI            shift and go to state 62


state 20

    (5) funcall -> ID . LPAREN funcall_params RPAREN
    (95) var -> ID .

    LPAREN          shift and go to state 63
    EQUALS          reduce using rule 95 (var -> ID .)


state 21

    (29) if -> IF . LPAREN expression RPAREN LBRACE body RBRACE
    (30) if -> IF . LPAREN expression RPAREN LBRACE body RBRACE ELSE if
    (31) if -> IF . LPAREN expression RPAREN LBRACE body RBRACE ELSE LBRACE body RBRACE

    LPAREN          shift and go to state 64


state 22

    (35) readd -> READD . expression
    (39) expression -> . value
    (40) expression -> . bool_ex
    (41) expression -> . op_ex
    (75) value -> . var
    (76) value -> . int
    (77) value -> . float
    (78) value -> . string
    (79) value -> . bool
    (80) value -> . funcall
    (81) value -> . list
    (82) value -> . array_get
    (83) value -> . tree_get
    (42) bool_ex -> . bool_value EQ bool_value
    (43) bool_ex -> . bool_value NE bool_value
    (44) bool_ex -> . bool_value LE bool_value
    (45) bool_ex -> . bool_value GE bool_value
    (46) bool_ex -> . bool_value LT bool_value
    (47) bool_ex -> . bool_value GT bool_value
    (48) bool_ex -> . bool_value LOR bool_value
    (49) bool_ex -> . bool_value LAND bool_value
    (50) bool_ex -> . LNOT bool_value
    (51) bool_ex -> . LPAREN bool_ex RPAREN
    (54) op_ex -> . value PLUS value
    (55) op_ex -> . value MINUS value
    (56) op_ex -> . value TIMES value
    (57) op_ex -> . value DIVIDE value
    (58) op_ex -> . value MOD value
    (59) op_ex -> . value LSHIFT value
    (60) op_ex -> . value RSHIFT value
    (61) op_ex -> . value OR value
    (62) op_ex -> . value AND value
    (63) op_ex -> . value XOR value
    (64) op_ex -> . value PLUS op_ex
    (65) op_ex -> . value MINUS op_ex
    (66) op_ex -> . value TIMES op_ex
    (67) op_ex -> . value DIVIDE op_ex
    (68) op_ex -> . value MOD op_ex
    (69) op_ex -> . value LSHIFT op_ex
    (70) op_ex -> . value RSHIFT op_ex
    (71) op_ex -> . value OR op_ex
    (72) op_ex -> . value AND op_ex
    (73) op_ex -> . value XOR op_ex
    (74) op_ex -> . LPAREN op_ex RPAREN
    (95) var -> . ID
    (84) int -> . INT
    (85) float -> . FLOAT
    (86) string -> . STRING
    (87) string -> . MULTI_STRING
    (88) bool -> . TRUE
    (89) bool -> . FALSE
    (5) funcall -> . ID LPAREN funcall_params RPAREN
    (90) list -> . LBRACKET array RBRACKET
    (93) array_get -> . ID LBRACKET INT RBRACKET
    (94) tree_get -> . ID LBRACKET string RBRACKET
    (52) bool_value -> . value
    (53) bool_value -> . op_ex
